# wmx-ros2

./: .clang-format  .gitignore  LICENSE.txt  README.md  Readme.md  wmx_ros2_general_package.service
.github/workflows/: lint.yml
amr_ros2_interface/: 20241016_mic-713_ox4_5.1.2_linux_5.10.120_rt70-installer.deb  CMakeLists.txt  Dockerfile  Readme.md  amr_ros2_interface.service  package.xml
amr_ros2_interface/config/: diff_drive_config.yaml
amr_ros2_interface/launch/: diff_drive.launch.py
doc/: 1_setup.md  2_How_to_run_wmx_ros2_package.md  2_run_wmx_ros2_general_nodes.md  2_run_wmx_ros2_package.md  2_service_reference.md  3_How_to_run_cr3a_manipulator.md  3_launch_cr3a_manipulator.md  3_orin_manipulator_cr3a.md  3_testing.md  4_service_reference.md  5_How_to_test.md  5_testing.md  diff_drive.md  general.md  intel_manipulator_cr3a.md  jetson_manipulator_cr3a.md  launch_dobot_cr3a_manipulator.md  launch_dobot_cr5a_manipulator.md  manipulator.md  manipulator_dobot_cr3a.md  run_wmx_ros2_general_nodes.md  test_services_command.md  thor_manipulator_cr3a.md
eni/: 00000083_0000007c.txt  00000230_4f911c30.txt  0000066f_515050a1.txt  0000066f_515050a1_PP.txt  0000066f_555400a1.txt  0000066f_60380004_PP.txt  0000066f_60380005.txt  00000a62_00000106.txt  00000a62_00000c40.txt  00009555_00001000.txt  00009555_00010002.txt  00009555_00010101.txt  00009555_00010201.txt  00009555_00010400.txt  0fa00000_00001002.txt  0fa00000_00001002_PP.txt
foxy_moveit2/: README.md
foxy_moveit2/cr3a_description/: CMakeLists.txt  package.xml
foxy_moveit2/cr3a_moveit_config/: CMakeLists.txt  Readme.md  package.xml
foxy_moveit2/cr3a_moveit_config/config/: cr3a.ros2_control.xacro  cr3a.srdf  cr3a.urdf.xacro  cr3a_controllers.yaml  cr3a_ros_controllers.yaml  initial_positions.yaml  kinematics.yaml
foxy_moveit2/cr3a_moveit_config/launch/: cr3a_moveit.launch.py
foxy_moveit2/cr3a_moveit_config/rviz/: cr3a_moveit_config_demo.rviz
foxy_navigation/: CMakeLists.txt  package.xml
foxy_navigation/config/: ekf.yaml  mapper_params_online_async.yaml  navigation.yaml
foxy_navigation/launch/: 01-controller.launch.py  02-mapping.launch.py  03-autonomous.launch.py  navigation.launch.py
foxy_navigation/maps/: map.pgm
lmx_tui_general/: lmx-tui-general  lmx-tui-general.ini
media/: screen_1.webm  screen_2.webm  screen_3.webm  screen_4.webm  screen_5.webm
wmx_ros2_general_package/: CMakeLists.txt  Readme.md  package.xml  wmx_ros2_general_package.service
wmx_ros2_general_package/example/: wmx_ros2_general_example.cpp
wmx_ros2_general_package/include/wmx_header/: engine.cpp  engine.hpp  wmx_ros2_axis_pose.cpp  wmx_ros2_axis_pose.hpp  wmx_ros2_axis_pose_server.hpp  wmx_ros2_core_motion.cpp  wmx_ros2_core_motion.hpp  wmx_ros2_engine.cpp  wmx_ros2_engine.hpp  wmx_ros2_general.hpp
wmx_ros2_general_package/launch/: wmx_ros2_general.launch.py
wmx_ros2_general_package/src/: wmx_core_motion_node.cpp  wmx_engine_node.cpp  wmx_ros2_axis_pose_server.cpp  wmx_ros2_core_motion_node.cpp  wmx_ros2_engine_node.cpp  wmx_ros2_general_node.cpp
wmx_ros2_message/: CMakeLists.txt  Readme.md  package.xml
wmx_ros2_message/action/: AxisPose.action  AxisPosition.action
wmx_ros2_message/msg/: AxisPose.msg  AxisState.msg  AxisVelocity.msg
wmx_ros2_message/srv/: EcatChangeSlaveState.srv  EcatDiagnosisScan.srv  EcatGetMasterInfo.srv  EcatGetMasterInfoList.srv  EcatGetNetworkState.srv  EcatPdoRead.srv  EcatRegisterRead.srv  EcatResetStatistics.srv  EcatSdoDownload.srv  EcatSdoUpload.srv  EcatTxPdoWrite.srv  GetIoBit.srv  GetIoBytes.srv  GetWmxParams.srv  LoadWmxParams.srv  SetAxis.srv  SetAxisGearRatio.srv  SetAxisMode.srv  SetEngine.srv  SetIoBit.srv  SetIoBytes.srv
wmx_ros2_moveit2_package/: CMakeLists.txt  package.xml
wmx_ros2_moveit2_package/config/: cr3a_config.yaml
wmx_ros2_moveit2_package/launch/: wmx_moveit2.launch.py
wmx_ros2_moveit2_package/src/: cr3a_interface.cpp
wmx_ros2_navigation2_package/: CMakeLists.txt  Readme.md  package.xml
wmx_ros2_package/: CMakeLists.txt  package.xml
wmx_ros2_package/config/: cr3a_config.yaml  cr3a_manipulator_config.yaml  cr3a_wmx_parameters.xml  cr5a_manipulator_config.yaml  cr5a_wmx_parameters.xml  diff_drive_controller_config.yaml  intel_manipulator_config_cr3a.yaml  manipulator_config.yaml  manipulator_config_dobot_cr3a.yaml  mapper_params_online_async.yaml  thor_manipulator_config_cr3a.yaml
wmx_ros2_package/example/: wmx_ros2_general_example.cpp
wmx_ros2_package/include/: wmx_core_motion_node.hpp  wmx_engine_node.hpp  wmx_ethercat_node.hpp  wmx_io_node.hpp
wmx_ros2_package/include/wmx_general_header/: wmx_ros2_engine.cpp  wmx_ros2_general.cpp  wmx_ros2_general.hpp
wmx_ros2_package/launch/: dobot_cr3_compare.launch.py  mapping.launch.py  nav2_stack.launch.py  navigation.launch.py  navigation2.launch.py  wmx_ros2_cr3a.launch.py  wmx_ros2_cr3a_manipulator.launch.py  wmx_ros2_cr5a_manipulator.launch.py  wmx_ros2_diff_drive_controller.launch.py  wmx_ros2_general.launch.py  wmx_ros2_general_nodes.launch.py  wmx_ros2_general_package.launch.py  wmx_ros2_intel_manipulator_cr3a.launch.py  wmx_ros2_jetson_manipulator_cr3a.launch.py  wmx_ros2_manipulator.launch.py  wmx_ros2_manipulator_dobot_cr3a.launch.py  wmx_ros2_moveit2.launch.py  wmx_ros2_multi_node.launch.py  wmx_ros2_navigation2.launch.py  wmx_ros2_orin_manipulator_cr3a.launch.py  wmx_ros2_thor_manipulator_cr3a.launch.py
wmx_ros2_package/maps/: map.yaml
wmx_ros2_package/rviz/: mapping.rviz
wmx_ros2_package/src/: action_move_server.cpp  action_move_server.py  cr3a_action.cpp  cr3a_interface.cpp  cr3a_state.cpp  diff_drive_controller.cpp  diff_drive_interface.cpp  dobot_cr3_compare.cpp  follow_joint_trajectory_server.cpp  gripper_controller.cpp  joint_state_broadcaster.cpp  joint_trajectory_controller.cpp  manipulator_action.cpp  manipulator_state.cpp  wmx_core_motion_node.cpp  wmx_engine_node.cpp  wmx_ethercat_node.cpp  wmx_io_node.cpp  wmx_ros2_general_node.cpp
wmx_ros2_package/test/: test_core_motion_node.py  test_engine_lifecycle.py  test_ethercat_node.py  test_io_node.py  test_message_interfaces.py
(+23 files in other folders)
