<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wmx_ros2_message</name>
  <version>0.1.0</version>
  <description>ROS 2 message and service definitions for WMX3 motion control SDK</description>
  <maintainer email="mfikih@movensys.com">mfikih15</maintainer>
  <maintainer email="mali@movensys.com">mohsinarf</maintainer>
  <maintainer email="daniel@movensys.com">Daniel Hong</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
